--- a/src/app/pages/students/add-student-details/add-student-details.component.html
+++ b/src/app/pages/students/add-student-details/add-student-details.component.html
@@ -15,7 +15,7 @@
 
         <div class="ibox-body">
           <form id="add-student-detail-form" [formGroup]="addStudentDetailsForm" (ngSubmit)="onAddStudentDetailsSubmit()">
-            <div class="row student-info">
+            <div class="row student-info pl-3">
               <div class="col-md-12 mb-3">
                 <h6 class="h6 font-weight-bold sub-heading">Previous Institution Information</h6>
               </div>
@@ -101,7 +101,7 @@
 
             <br />
 
-            <div class="row">
+            <div class="row pl-3">
               <div class="col-md-12 mb-3 mt-4">
                 <h5 class="h6 font-weight-bold sub-heading">Emergency Contact Information</h5>
               </div>
@@ -153,7 +153,7 @@
 
             <br />
 
-            <div class="row">
+            <div class="row pl-3">
               <div class="col-md-12 mb-3 mt-4">
                 <h5 class="h6 font-weight-bold sub-heading">Permanent Address Information</h5>
               </div>
@@ -220,7 +220,7 @@
               </div>
             </div>
 
-            <div class="row">
+            <div class="row pl-3">
               <div class="col-md-12 mb-3 mt-4">
                 <h5 class="h6 font-weight-bold sub-heading">Temporary Address Information</h5>
               </div>
@@ -282,7 +282,7 @@
 
 
 
-            <div class="row mb-2">
+            <div class="row mb-2 pl-3">
               <div class="col-md-12 mb-3 mt-4">
                 <h5 class="h6 font-weight-bold sub-heading">Family Information</h5>
               </div>
@@ -349,7 +349,7 @@
 
 
 
-            <div class="row  mb-2">
+            <div class="row pl-3 mb-2">
               <div class="col-md-12 mb-3 mt-4">
                 <h5 class="h6 font-weight-bold sub-heading">Bank Information</h5>
               </div>
@@ -374,7 +374,7 @@
             </div>
 
 
-            <div class="row mb-2">
+            <div class="row mb-2 pl-3">
               <div class="col-md-12 mb-3 mt-4">
                 <h5 class="h6 font-weight-bold sub-heading">Others Information</h5>
               </div>
